# ohtu-citecontroller

./: .gitignore  .pylintrc  LICENSE  Procfile  README.md  log.html  main.yaml  output.xml  pyproject.toml  report.html  requirements.txt  run_robot_tests.sh  test.txt.save
.github/: codecov.yml
.github/workflows/: main.yaml
src/: AppLibrary.py  app.py  config.py  initialize_database.py  reference.py  routes.py
src/logic/: controller.py  reference.py
src/repositories/: book_repository.py  cite_repository.py
src/services/: book_service.py  cite_service.py  doi_service.py
src/templates/: index.html  layout.html  references.html
src/tests/: article.robot  articleref_test.py  bibitex.robot  book.robot  bookref_test.py  cite_repository_test.py  controller_test.py  index.robot  inproceedings.robot  inproceedingsref_test.py  list.robot  resource.robot  search.robot
