[tool.poetry]
name = "ohtugroup2"
version = "0.1.0"
description = ""
authors = ["Alexander, Joonas, Meeri, Neoh, Noora, Juuso"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
coverage = "^6.5.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
